--- a/My Portfolio/Bio.html
+++ b/My Portfolio/Bio.html
@@ -21,7 +21,7 @@
         <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Resume.html">
             Resume
         </a>
-        <a href="C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Bio.html">
+        <a href="C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Bio">
             Bio
         </a>
         <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Contact.html">
