--- a/My Portfolio/Bio.html
+++ b/My Portfolio/Bio.html
@@ -18,7 +18,7 @@
         <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Projects.html">
             Projects
         </a>
-        <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Resume.html">
+        <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Resume">
             Resume
         </a>
         <a href="C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Bio">
