--- a/My Portfolio/Bio.html
+++ b/My Portfolio/Bio.html
@@ -18,10 +18,10 @@
         <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Projects.html">
             Projects
         </a>
-        <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Resume">
+        <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Resume.html">
             Resume
         </a>
-        <a href="C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Bio">
+        <a href="C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Bio.html">
             Bio
         </a>
         <a href="file:///C:/Users/aspire510/Desktop/Codes/My%20Portfolio/Contact.html">
